# dotfiles

./: .gitconfig  .gitignore  .zshrc  README.md  tex2json.py
beamer/: original.tex  original.tex.txt  test.tex
karabiner/: README.md  arrow.json  emacs_for_office.json
latex/: README.md  tex2json.py
latex/paper/: original.tex.txt
marp/: sample.md  theme.css
paper/: test.tex
paper/original/: original.tex
python/: README.md  pyproject.toml
report/: original.tex  original.tex.txt  test.tex
report/original/: original.tex
report/test/: test.tex
shell/: .gitconfig  .p10k.zsh  .tmux.conf  .zshrc  plugins.toml
uesrscripts/: mastodon.js  sphinx.js
vscode/: keybindings.json  settings.json  sftp.json
vscode/snippets/: markdown.json
