[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plt",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
plt = { git = "https://github.com/yuji96/plt.git" }

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.31.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
